should have nowrap because in mix-mode, "parseTemplate" no longer minify the HTML and tags might appears with a mystery padding

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -189,6 +189,7 @@
             line-height    : inherit;
             border-radius  : 3px;
             user-select    : none;
+            white-space    : nowrap;
             transition     : .13s ease-out;
 
             > *{
